apps/royal-dispatch/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: royal-dispatch
  labels:
    app: royal-dispatch
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: royal-dispatch
      component: frontend
  template:
    metadata:
      labels:
        app: royal-dispatch
        component: frontend
    spec:
      containers:
        - name: frontend
          image: quydoan/royal-dispatch-frontend:fef9e96-1777356336 # {"$imagepolicy": "flux-system:royal-dispatch-frontend"}
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
