apps/royal-dispatch/base/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: royal-dispatch
  labels:
    app: royal-dispatch
    component: admin
spec:
  selector:
    app: royal-dispatch
    component: admin
  ports:
    - port: 3001
      targetPort: 3001
